[build-system]
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"

[project]
name = "karon-mcp"
version = "1.4.1"
description = "Karon API MCP server for Claude, Cursor, and other MCP clients. Retrieve web content from MCP-compatible tools."
readme = "PYPI_README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Karon Labs", email = "ceo@karonlabs.net" },
]
keywords = ["mcp", "web-content", "retrieval", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://karonlabs.net/api/"
Documentation = "https://karonlabs.net/api/docs.html"
Repository = "https://github.com/pplar39/karon-mcp"
Changelog = "https://github.com/pplar39/karon-mcp/blob/main/CHANGELOG.md"

[project.scripts]
karon-mcp = "karon_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/karon_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/karon_mcp",
    "/README.md",
    "/PYPI_README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = [
    "/.git",
    "/.gitignore",
    "/.github",
    "/tests",
    "/scripts",
    "/dist",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.mypy_cache",
    "/.venv",
]
